--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 # You don't need to edit this file, it's empty on purpose.
 # Edit theme's home layout instead if you wanna make some changes
 # See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-layout: home
+layout: splash
 author_profile: true
----
+header:
+    image: /assets/images/VideoThumbnail.png
+    image_description: "My 100th creative coding project celebration video thumbnail 🥳"
+feature_row:
+    - title: "Creative Coding"
+      url: "/_pages/wccc/"
+    - title: "Blender"
+      url: "/_pages/blender/"
+    - title: "Tutorials"
+      url: "/_pages/tutorials/"
+    - title: "Courses"
+      url: "/_pages/courses/"
+   
+    ---
